Fix add reverse proxy popup alignment

--- a/src/apps/ReverseProxy/ReverseProxyApp/ReverseProxyApp.module.sass
+++ b/src/apps/ReverseProxy/ReverseProxyApp/ReverseProxyApp.module.sass
@@ -6,6 +6,9 @@
     @include dimensions.extra-small-or-less
         margin: 20px 30px
 
+.input
+    margin: 0
+
 .redirects
     display: flex
     flex-direction: column
